2006-03-20  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c: Update for rendering to FBOs. Adjust
	clipping and draw/read offsets when FBO is bound. Lookup texture and
	renderbuffer objects when attaching. Fix
	GetFramebufferAttachmentParameterivEXT.

2006-03-15  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxlog.c:
	Add missing log functions for GL_ARB_vertex_program.

	* hw/xgl/glxext/xglglxext.c: Sync with mesa head.

	* GL/mesa/X/xf86glx.c (init_screen_visuals): Pass the correct visual
	to XMesaCreateVisual.
	(__glXMesaDrawableDestroy): Only try to destroy mesa buffer if it has
	been created.
	(__glXMesaContextDestroy):
	(__glXMesaContextLoseCurrent): Flush context cache appropriately.
	(__glXMesaContextForceCurrent): Set dispatch table.

2006-03-13  Matthias Hopf  <mhopf@suse.de>

	* GL/mesa/Makefile.am:
	* configure.ac:
	Real fix for glapi: Remove Makefile generation, don't distribute.

2006-03-13  David Reveman  <davidr@novell.com>

	* GL/mesa/X/xf86glx.c:
	* GL/glx/glxscreens.c:
	* GL/glx/glxdri.c:
	* GL/glx/glxdrawable.h:
	* GL/glx/glxcmdsswap.c:
	* GL/glx/glxcmds.c: CopySubBufferMESA support.

2006-03-13  Matthias Hopf  <mhopf@suse.de>

	Needed for 'make distcheck':
	* GL/mesa/Makefile.am: Add glapi to DIST_SUBDIRS.
	* hw/xfree86/Makefile.am: Sync to trunk branch.

2006-03-11  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c (xglBindTexImage): Add missing break
	statement so that TEXTURE_RECTANGLE can be used again.

2006-03-10  David Reveman  <davidr@novell.com>

	* hw/xgl/glxext/xglglxext.c:
	* GL/glx/glxscreens.c:
	* GL/glx/g_disptab_EXT.c:
	* GL/glx/rensizetab.c:
	* GL/glx/glxcmdsswap.c (__glXSwapVendorPrivateWithReply):
	* GL/glx/glxcmds.c (__glXVendorPrivateWithReply):
	GL_ARB_vertex_program and GL_ARB_fragment_program support.

	* hw/xgl/glxext/xglglxext.c: Remove renderbuffer from context.

	* GL/glx/indirect_dispatch_swap.c:
	* GL/glx/indirect_dispatch.c: New automatically generated code